tests/duarouter/alternatives/style2_input/errors/route/route_prob_negative/errors.duarouter
Error: Invalid probability for route '!1'.
Quitting (on error).
